fixup! fix vertical alignment in table rows

--- a/plugins/portals-list.css
+++ b/plugins/portals-list.css
@@ -96,8 +96,8 @@
 
 #portalslist .history {
   text-align: center;
-  font-size: 30px;
-  line-height: 15px;
+  font-size: 20px;
+  line-height: 13px;
 }
 
 #portalslist .history.unvisited {
